===========

Bug fixes:

 - use scanline oriented operations to flip images instead of pixel
   operations
   https://rt.cpan.org/Ticket/Display.html?id=39278

 - use double/sample operations to flip large sample images instead of
   8-bit sample operations.
   https://rt.cpan.org/Ticket/Display.html?id=39280

 - fix POD nits
   https://rt.cpan.org/Ticket/Display.html?id=51874

Imager 0.71 - 16 Nov 2009
===========

 - add the opacity fill type - an adaptor that modifies the opacity of
   another fill.

Bug fixes:

 - the conv filter now enforces that the sum of the coefficients is
   non-zero.  Also, rather than skipping pixels off the edge off the
   edge of the image, the closest edge pixel is used.  Previously
   dividing by the zero sum of coefficients could cause invalid
   results or runtime exceptions.
   Thanks to David Cantrell's Alpha-NetBSD CPAN test box for revealing
   this bug.

Imager 0.70 - 21 Sep 2009
===========

Bug fixes:

 - release image row and comments memory on all error returns in gif
   reader

 - handle zero length extensions, previously this would cause a null
   pointer dereference
   Thanks to Krzysztof Wojtaś for the test data and fix for this.

 - an integer division meant that preview scaling to below 1 pixel
   wide or high (which isn't too useful anyway) was calculating using
   NaNs on most platforms, and causing an exception on others.
   Thanks to David Cantrell for producing a backtrace of the crash on
   his Alpha-NetBSD CPAN test box which made it possible to track this
   down.

Imager 0.69 - 08 Sep 2009
===========

Bug fixes:

 - broken test fix - was attempting to call a function skip_all, when
   that should be a parameter to plan().

 - briefly document apidocs.perl, the tool used to build
   Imager::APIRef and make some minor enhancements

 - various minor documentation enhancements and fixes.

Imager 0.68 - 07 Sep 2009
===========

 - Imager->new(file => $filename) and other similar incantations will