@@ -873,6 +873,8 @@ i_int_hlines_DESTROY(i_int_hlines *hlines) {
   myfree(hlines);
 }
 
+#define i_int_hlines_CLONE_SKIP(cls) 1
+
 static int seg_compare(const void *vleft, const void *vright) {
   const i_int_hline_seg *left = vleft;
   const i_int_hline_seg *right = vright;
@@ -1232,6 +1234,13 @@ i_io_close(ig)
 void
 i_io_DESTROY(ig)
         Imager::IO     ig
+
+int
+i_io_CLONE_SKIP(...)
+    CODE:
+	RETVAL = 1;
+    OUTPUT:
+	RETVAL
 
 MODULE = Imager		PACKAGE = Imager
 
@@ -2074,6 +2083,13 @@ MODULE = Imager         PACKAGE = Imager::Font::TT      PREFIX=TT_
 void
 TT_DESTROY(handle)
      Imager::Font::TT   handle
+
+int
+TT_CLONE_SKIP(...)
+    CODE:
+        RETVAL = 1;
+    OUTPUT:
+        RETVAL
 
 
 MODULE = Imager         PACKAGE = Imager
@@ -4454,6 +4470,13 @@ void
 FT2_DESTROY(font)
         Imager::Font::FT2 font
 
+int
+FT2_CLONE_SKIP(...)
+    CODE:
+        RETVAL = 1;
+    OUTPUT:
+        RETVAL
+
 MODULE = Imager         PACKAGE = Imager::Font::FreeType2 
 
 Imager::Font::FT2
@@ -4788,6 +4811,13 @@ void
 IFILL_DESTROY(fill)
         Imager::FillHandle fill
 
+int
+IFILL_CLONE_SKIP(...)
+    CODE:
+        RETVAL = 1;
+    OUTPUT:
+        RETVAL
+
 MODULE = Imager         PACKAGE = Imager
 
 Imager::FillHandle
@@ -4912,6 +4942,10 @@ i_int_hlines_DESTROY(hlines)
 SV *
 i_int_hlines_dump(hlines)
 	Imager::Internal::Hlines hlines
+
+int
+i_int_hlines_CLONE_SKIP(cls)
+	SV *cls
 
 #endif
 
